changed image name and added stepd to deploy to kubernetes

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: secrets-module
-        image: aheshalagu/secrets_management
+        image: aheshalagu/hello_server
         resources:
           limits:
             memory: "128Mi"
